# cgpuconv

./: CMakeLists.txt  CPUconv.cpp  GPUconv.cu  Makefile  Makefile 2  Makefile-e  OCLComplexPwiseMul.cl  OCLconv.cpp  OCLconv.hpp  ProjectHome.md  README.md  cgpuconv.cpp  cgpuconv.hpp  clFFT.h  common.mk  fft_kernelstring.cpp  fft_setup.cpp  main.cpp  oclUtils.h
cmake/: FindLibSndFile.cmake  FindOpenCL.cmake  FindPortAudio.cmake
src/: CPUconv.cpp  CPUconv.hpp  GPUconv.cu  GPUconv.cuh
